fixed spacing with landing and messed with font weight

--- a/src/src/components/Landing/Landing.css
+++ b/src/src/components/Landing/Landing.css
@@ -9,7 +9,7 @@
 .intro-text {
   width: 30%;
   position: absolute;
-  left: 36%;
+  left: 34%;
   top: 30%;
   font-size: 2rem;
   line-height: 12 * 1.618;
@@ -21,7 +21,7 @@
 
 .next-text {
   position: absolute;
-  width: 20%;
+  width: 15%;
   bottom: 20px;
   left: 41%;
   font-size: 1.6rem;
